--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="style2.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 
     <!-- Google Fonts -->  
     <link href='https://fonts.googleapis.com/css?family=Karla:700,400|Bitter:400,400italic' rel='stylesheet' type='text/css'>
