--- a/Index.html
+++ b/Index.html
@@ -10,10 +10,10 @@
     <title>Sourav Verma | Web Developer</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="CSS/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="CSS/style.css" rel="stylesheet">
 
     <!-- Google Fonts -->  
     <link href='https://fonts.googleapis.com/css?family=Karla:700,400|Bitter:400,400italic' rel='stylesheet' type='text/css'>
