--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     <link href="CSS/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="CSS/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- Google Fonts -->  
     <link href='https://fonts.googleapis.com/css?family=Karla:700,400|Bitter:400,400italic' rel='stylesheet' type='text/css'>
@@ -26,7 +26,6 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-
       <![endif]-->
   </head>
   
@@ -71,7 +70,7 @@
         <div class="section">
           <h3 class="text-center"><span class="sectionName">About Me</span></h3>
           <div class="col-md-3">
-            <img style="position:center" src="https://pbs.twimg.com/profile_images/687347709439680512/KwiGiuAx_bigger.jpg"
+            <img style="position:center" src="images/photo0081.jpg"
                  alt="photo of Sourav0007" class="img-responsive img-circle">
           </div>
           <div class="col-md-9">
@@ -85,7 +84,7 @@
     <div id="skills" class="container-fluid my-containers">
       <div class="section">
         <h3 class="text-center"><span class="sectionName">Skills</span></h3>
-        <p>I am proficient in the following languages and frameworks: C, C++, Python, HTML5, CSS3, JavaScript, jQuery, a little Bootstrap; as well as some good knowledge of Data Structure and Algorithms and responsive design.</p>
+        <p>I am proficient in the following languages and frameworks: C, C++, Python, HTML5, CSS3, JavaScript, jQuery, a little Bootstrap,php, working on Django framework; as well as have some good knowledge of Data Structure, Algorithms and responsive design. I'm also interested in Machine Learning, Big data and Data Science.</p>
       </div> <!-- close section -->
     </div> <!-- close SKILLS -->
 
@@ -95,7 +94,7 @@
         <div class="row">
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <a href="http://codepen.io/sourav_v/full/zqdKKR/" target="_blank"><img src="https://lh3.googleusercontent.com/xMmhki4Z0q3Weuu5w89pXOktOhN4LKFayEYmqthgdH_f7eIyWx_VrS4IfpptPkBD5hnT=s170" width="400" height="200" border="0" alt="computer, laptop, smartphone" class="img-responsive"></a>
+              <a href="http://codepen.io/sourav_v/full/zqdKKR/" target="_blank"><img src="images/banner3.jpg" width="400" height="200" border="0" alt="computer, laptop, smartphone" class="img-responsive"></a>
               <div class="caption">
                 <h4>A Tribute Page</h4>
                 <p>A Tribute Page that I built in the <a href="http://freecodecamp.com" target="_blank">FreeCodeCamp</a> course (Project1). It is built with Html5 , CSS and uses the Bootstrap framework.</p>
@@ -105,7 +104,7 @@
           
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <a href="http://codepen.io/sourav_v/full/ONjWMo/" target="_blank"><img src="https://lh3.googleusercontent.com/QkQ6ZHCaJ4Tpj5SQpSFPr3mKSwZQNt51TU1ih_nKaluf68f-DxqSQXBLLVBlmgg_E9mM3WQ=s170" width="400" height="400" border="0" alt="computer, laptop, smartphone" class="img-responsive"></a>
+              <a href="http://codepen.io/sourav_v/full/ONjWMo/" target="_blank"><img src="images/banner3.jpg" width="400" height="400" border="0" alt="computer, laptop, smartphone" class="img-responsive"></a>
               <div class="caption">
                 <h4>A Simple Portfolio</h4>
                 <p>A Portfolio Page that I built in the <a href="http://freecodecamp.com" target="_blank">FreeCodeCamp</a> course (Project2). It is built with Html5 , CSS and uses the Bootstrap framework.</p>
@@ -115,7 +114,7 @@
           
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <a href="http://codepen.io/sourav_v/full/jqZZQy/" target="_blank"><img src="https://lh3.googleusercontent.com/G28U_VFW6T_IyewpQrrEawJK_kWLwDcDxqVVHNYYcdOUnXR3GHGPh-0rSls-tR0zdz2T=s170" width="400" height="400" border="0" alt="computer, laptop, smartphone" class="img-responsive"></a>
+              <a href="http://codepen.io/sourav_v/full/jqZZQy/" target="_blank"><img src="images/banner3.jpg" width="400" height="400" border="0" alt="computer, laptop, smartphone" class="img-responsive"></a>
               <div class="caption">
                 <h4>A Random Quote Generator</h4>
                 <p>A Random Quote Generator that I built in the <a href="http://freecodecamp.com" target="_blank">FreeCodeCamp</a> course (Project3). It is built with Html5 , CSS , JavaScript and uses the Bootstrap framework.</p>
